--- a/abet-submission-system/package.json
+++ b/abet-submission-system/package.json
@@ -38,8 +38,9 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "mocha": "^6.2.1",
+    "mocha": "^6.2.2",
     "nodemon": "^1.19.2",
-    "sinon": "^7.5.0"
+    "sinon": "^7.5.0",
+    "supertest": "^4.0.2"
   }
 }
