--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "migrate": "node ./node_modules/knex/bin/cli.js migrate:latest",
     "seed": "node ./node_modules/knex/bin/cli.js seed:run",
     "setup_db": "npm run migrate && npm run seed",
+	"setup_db_test": "npm run migrate:test && npm run seed:test",
     "test": "node ./node_modules/mocha/bin/mocha \"src/test/cases/**/*.js\""
   },
   "repository": {
