--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -25,4 +25,6 @@ jobs:
     - uses: harmon758/postgresql-action@v1
       with:
         postgresql version: '11'  # See https://hub.docker.com/_/postgres for available versions
-        postgresql db: 'abet_system_test' 
+        postgresql db: 'abet_system_test'
+        postgresql user: 'postgres'
+        postgresl password: 'ukySb3rt*&87'
