--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -26,5 +26,5 @@ jobs:
       with:
         postgresql version: '11'  # See https://hub.docker.com/_/postgres for available versions
         postgresql db: 'abet_system_test'
-        postgresql user: 'postgres'
-        postgresl password: 'ukySb3rt*&87'
+        user: 'postgres'
+        password: 'ukySb3rt*&87'
